# connect_oracle_vcn

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml
connect_oracle_vcn/: __init__.py  __main__.py  commands.py  config.py  helpers.py  repository.py  usecases.py  values.py
peer_oracle_vcn/: __init__.py  __main__.py  commands.py  config.py  helpers.py  repository.py  usecases.py  values.py
tests/: test_config.py
