[tool.poetry]
name = "peer_oracle_vcn"
version = "0.2.0"
description = ""
authors = ["Byeonghoon Yoo <bh322yoo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
oci = "^2.57.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^4.0.1"
python-dotenv = "^0.19.2"
pytest = "^7.0.1"

[tool.poetry.scripts]
peer_oracle_vcn = 'peer_oracle_vcn:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true