[tool.poetry]
name = "peer_oracle_vcn"
version = "0.2.0"
description = ""
authors = ["Byeonghoon Yoo <bh322yoo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
oci = "^2.93.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6"
flake8 = "^5.0.4"
python-dotenv = "^0.20.0"
pytest = "^7.1.2"

[tool.poetry.scripts]
peer_oracle_vcn = 'peer_oracle_vcn:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true